tests/NormalTests/paczka1/fuzzy1/97368239.err
Error in line 2: 6M A335 2,5
Error in line 24: A448 S696 42,8
Error in line 32: p7Oq A448 69,1
